fix dev products message contrast

--- a/apps/dashboard/app/assets/stylesheets/products.scss
+++ b/apps/dashboard/app/assets/stylesheets/products.scss
@@ -4,6 +4,7 @@
 
 #productCliModal {
   .product-cli-body {
+    --bs-success-rgb: rgb(66, 130, 66);
     height: calc(100vh - 300px);
     overflow-y: scroll;
     overflow-x: auto;
